# Genesis

./: .flake8  .gitignore  Makefile  docker-compose.yml  production.yml
app/: Dockerfile  Dockerfile.prod  README.md  pyproject.toml  startup.sh
app/config/: settings.py  urls.py
app/users/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf
